# BookScanner

./: README.md  pyproject.toml
bookscanner/: bookscanner.py
