[tool.poetry]
name = "bookscanner"
version = "0.1.0"
description = ""
authors = ["PavelDusek <pavel.dusek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
screeninfo = "^0.8.1"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
